fixed anchor hover effect on mobile

--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -181,7 +181,7 @@ section.navbar {
 
                     &:hover {
                         right: 0rem;
-                        background-color: none;
+                        background: none;
                     }
                     
                     i {margin: 0 .3rem 0 .8rem}
